--- a/src/app/componentes/pensamentos/listar-pensamento/listar-pensamento.component.html
+++ b/src/app/componentes/pensamentos/listar-pensamento/listar-pensamento.component.html
@@ -13,7 +13,7 @@
         </div>
         <h2 class="ff-inter">Meu mural</h2>
         <div class="botoes">
-            <button class="botao">Meu mural</button>
+            <button class="botao" (click)="recarregarComponente()">Meu mural</button>
             <button class="botao" (click)="listarFavoritos()">Meus Favoritos</button>
             <button routerLink="/criarPensamento" class="botao">Novo pensamento</button>
         </div>
